attempt at fixing unscrollable hidden view on mobile web

--- a/style.css
+++ b/style.css
@@ -10,9 +10,14 @@
     list-style: none;
 }
 
+html {
+    width: 100%;
+    height: 100%;
+}
+
 body {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: rgb(255, 184, 184);
     overflow: hidden;
 }
@@ -27,7 +32,7 @@ navbar-component {
     height: calc(100% - var(--navbar-height));
     position: relative;
     top: var(--navbar-height);
-    max-width: 70rem;
+    max-width: 50rem;
     margin: 0 auto;
     overflow-y: auto;
     overflow-x: hidden;
